updates spatial info

--- a/project_spatial/conda/environment_seurat.yml
+++ b/project_spatial/conda/environment_seurat.yml
@@ -10,6 +10,7 @@ dependencies:
  - bioconductor-scater
  - bioconductor-scran
  - bioconductor-singlecellexperiment
+ - bioconductor-spatialexperiment
  - bioconductor-rhdf5
  - bioconductor-biomart
  - bioconductor-org.hs.eg.db
@@ -24,6 +25,10 @@ dependencies:
  - r-venn
  - wget
  - compilers
+ - r-ggplot2
+ - r-dplyr
+ - r-tidyverse
+ 
 
 
 
