--- a/project_spatial/conda/environment_scanpy.yml
+++ b/project_spatial/conda/environment_scanpy.yml
@@ -10,6 +10,8 @@ dependencies:
  - pytorch=1.4.0
  - pandas=1.1.0
  - numpy=1.19.1
+ - torchvision
+ - cudatoolkit=10.2 
  - scipy=1.5.2
  - matplotlib-base=3.3.1
  - seaborn=0.11.1
@@ -24,6 +26,7 @@ dependencies:
    - tangram-sc
    - squidpy
    - scanorama
+   - umap-learn
 
 
 
