--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ description: SIB / NCCR
 theme: jekyll-theme-minimal
 plugins:
   - jekyll-relative-links
+  - jemoji
 markdown: CommonMarkGhPages
 relative_links:
   enabled: true
