--- a/project_spatial/conda/environment_seurat.yml
+++ b/project_spatial/conda/environment_seurat.yml
@@ -5,23 +5,23 @@ channels:
  - defaults
  - anaconda
 dependencies:
- - r-base
+ - r-base=4.0.3
  - rstudio
  - bioconductor-scater
- - bioconductor-scran
- - bioconductor-singlecellexperiment
- - bioconductor-spatialexperiment
- - bioconductor-rhdf5
+ - bioconductor-scran=1.18.5
+ - bioconductor-singlecellexperiment=1.12.0
+ - bioconductor-spatialexperiment=1.0.0
+ - bioconductor-rhdf5=2.34.0
  - bioconductor-biomart
  - bioconductor-org.hs.eg.db
  - bioconductor-scdblfinder
- - bioconductor-batchelor
+ - bioconductor-batchelor=1.6.2
  - r-pheatmap
  - r-harmony
  - r-igraph
- - r-seurat>=3.1.2
+ - r-seurat=4.0.1
  - r-umap
- - r-hdf5r
+ - r-hdf5r=1.3.3
  - r-venn
  - wget
  - compilers
@@ -29,6 +29,6 @@ dependencies:
  - r-dplyr
  - r-tidyverse
  - r-remotes 
-
+ - r-seuratdisk
 
 
