changes numba version

--- a/project_spatial/conda/environment_scanpy.yml
+++ b/project_spatial/conda/environment_scanpy.yml
@@ -9,7 +9,8 @@ dependencies:
  - pip=20.2.2
  - pytorch=1.4.0
  - pandas=1.1.0
- - numpy=1.19.1
+ - numpy=1.21.2
+ - numba=0.52.0 
  - torchvision
  - cudatoolkit=10.2 
  - scipy=1.5.2
@@ -23,8 +24,8 @@ dependencies:
    - scanpy>=1.6.0
    - comet_ml
    - scikit-learn
-   - tangram-sc
-   - squidpy
+   - tangram-sc==0.4.0
+   - squidpy==1.1.1
    - scanorama
    - umap-learn
 
